add audio class

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Shooting Blaster .ver 0.1</title>
+    <link rel="icon" href="data:,">
     <script defer src="dist/src/game.js"></script>
   </head>
   <body>
